fix layout bug introduced where page titles were hidden by navbar

--- a/fusor-ember-cli/app/styles/custom.scss
+++ b/fusor-ember-cli/app/styles/custom.scss
@@ -1,5 +1,10 @@
 /* custom.scss */
 
+#ember-app {
+  margin-top: 38px;
+  margin-left: 38px;
+}
+
 $debug-color: gray;
 $info-color: #333;
 $warning-color: #ec7a08;
